# MS-Alfred

./: .gitignore  alfred_notebook.ipynb  kill.sh  main.py  pyproject.toml  run.sh
alfred/: ai.py  auth.py  database.py  speech.py
alfred/models/: __init__.py
